<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MotionDetectorActivity">

    <TextView
        android:id="@+id/motionDetectorTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/motion_detector"
        android:textColor="@color/lavender"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/motionDetectorCard"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="20dp"
        app:layout_constraintBottom_toTopOf="@id/setupButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/motionDetectorTitle">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/motionDetectorImageInsideCard"
                android:layout_width="60dp"
                android:layout_height="70dp"
                android:layout_centerInParent="true"
                android:contentDescription="@string/motiondetectorcard"
                android:src="@drawable/motion_sensor" />


        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/setupButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="setupButton"
        android:text="@string/SetupTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/motionDetectorCard" />

    <TextView
        android:id="@+id/motionDetectorView"
        android:layout_width="315dp"
        android:layout_height="270dp"
        android:layout_marginTop="50dp"
        android:text="@string/no_motion_detector_setup"
        android:textAlignment="center"
        android:textSize="45sp"
        app:layout_constraintBottom_toTopOf="@id/startDetectingButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="wrap"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/setupButton"
        app:layout_constraintWidth_default="wrap"
        />

    <Button
        android:id="@+id/startDetectingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:onClick="buttonStartDetecting"
        android:text="@string/start_detecting"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/motionDetectorView" />

    <Button
        android:id="@+id/stopDetectingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:onClick="buttonStopDetecting"
        android:text="@string/stop_detecting"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/startDetectingButton" />

</androidx.constraintlayout.widget.ConstraintLayout>
