<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DoorLocksActivity">

    <TextView
        android:id="@+id/doorLocksTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/door_locks"
        android:textColor="@color/lavender"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/doorLocksCard"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="20dp"
        app:layout_constraintBottom_toTopOf="@id/setupButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/doorLocksTitle">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/doorLocksImageInsideCard"
                android:layout_width="60dp"
                android:layout_height="70dp"
                android:layout_centerInParent="true"
                android:contentDescription="@string/DoorLocksCard"
                android:src="@drawable/key" />


        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/setupButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="buttonSetup"
        android:text="@string/SetupTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/doorLocksCard" />

    <Button
        android:id="@+id/setLockPinButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:onClick="buttonSetLockPin"
        android:text="@string/set_lock_pin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setupButton" />

    <TextView
        android:id="@+id/doorLocksView"
        android:layout_width="315dp"
        android:layout_height="270dp"
        android:layout_marginTop="10dp"
        android:text="@string/no_doorlocks_setup"
        android:textAlignment="center"
        android:textSize="45sp"
        app:layout_constraintBottom_toTopOf="@id/lockDoorsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="wrap"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/setLockPinButton"
        app:layout_constraintWidth_default="wrap"
        />
    <EditText
        android:id="@+id/setLockPinText"
        android:inputType="text"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/setLockPinButton"
        app:layout_constraintBottom_toTopOf="@id/lockDoorsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="wrap"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_default="wrap"
        android:autofillHints="password"
        tools:ignore="LabelFor"
        />

    <Button
        android:id="@+id/lockDoorsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:onClick="buttonLockDoors"
        android:text="@string/start_doorlocks"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/doorLocksView" />

    <Button
        android:id="@+id/unlockDoorsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:onClick="buttonUnlockDoors"
        android:text="@string/stop_doorlocks"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lockDoorsButton" />

</androidx.constraintlayout.widget.ConstraintLayout>
