<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CameraActivity">

    <TextView
        android:id="@+id/cameraTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/camera"
        android:textSize="36sp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/poppins_semibold"
        android:textColor="@color/lavender"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cameraCard"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        app:cardElevation="20dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintTop_toBottomOf="@id/cameraTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/setupButton">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/cameraImageInsideCard"
                android:layout_width="60dp"
                android:layout_height="70dp"
                android:src="@drawable/camera"
                android:layout_centerInParent="true"
                android:contentDescription="@string/CameraCard" />

            <TextView
                android:id="@+id/cameraName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/cameraImageInsideCard"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/camera"
                android:textColor="@color/lavender"
                android:textSize="20sp" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:width="250dp"
        android:id="@+id/setupButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SetupTitle"
        app:layout_constraintTop_toBottomOf="@+id/cameraCard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/volumeButton"
        android:layout_marginTop="20dp" />

    <Button
        android:width="250dp"
        android:id="@+id/volumeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/VolumeTitle"
        app:layout_constraintTop_toBottomOf="@+id/setupButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="20dp" />
    

</androidx.constraintlayout.widget.ConstraintLayout>